--- a/azurepipeline.yml
+++ b/azurepipeline.yml
@@ -11,6 +11,8 @@ parameters:
 pool:
   vmImage: 'ubuntu-latest'
 
+trigger: none
+
 variables:
   subscription: Visual Studio Professional (060c7910-de04-45a3-9953-ad495ae2be2b)
   resourceGroup: cloud-shell-storage-centralindia
