--- a/azurepipeline.yml
+++ b/azurepipeline.yml
@@ -1,10 +1,10 @@
 parameters:
-  - name: User_First_name
-    displayName: "User First Name"
+  - name: Group_name
+    displayName: "Group Name"
     type: string
 
-  - name: User_last_name
-    displayName: "User Last Name"
+  - name: Group_Des
+    displayName: "Group Description"
     type: string
 
 
@@ -20,10 +20,8 @@ variables:
   container: con
   tfstateFile: terraform.tfstate
   anyTfChanges: false
-  TF_VAR_FIRST_NAME: '${{ parameters.User_First_name }}'
-  TF_VAR_LAST_NAME: '${{ parameters.User_last_name }}'
-  TF_VAR_full_name: '${{ parameters.User_First_name }} ${{ parameters.User_Last_name }}'
-  TF_VAR_UPN: '${{ parameters.User_First_name }}.${{ parameters.User_Last_name }}@rajurauniyarkumaroutlook.onmicrosoft.com'
+  TF_VAR_GROUP_NAME: '${{ parameters.Group_name }}'
+  TF_VAR_GROUP_DESCRIPTION: '${{ parameters.Group_Des }}'
 
 steps:
 
