Update azurepipeline.yml for Azure Pipelines

--- a/azurepipeline.yml
+++ b/azurepipeline.yml
@@ -14,7 +14,7 @@ pool:
 trigger: none
 
 variables:
-  subscription: Visual Studio Professional (060c7910-de04-45a3-9953-ad495ae2be2b)
+  subscription: user-sp-connection
   resourceGroup: cloud-shell-storage-centralindia
   storageAccount: csg100320004eec02d2
   container: con
